src-ken&y/objects/Item_Cost__c.object
<CustomObject>
    <customHelpPage>HelpItemCost</customHelpPage>
    <description>Item cost</description>
    <fields>
        <fullName>Change_Reason__c</fullName>
        <description>This field captures the reason as to why the start date of the item cost record is changed.</description>
        <label>Change Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Item Costs</relationshipLabel>
        <relationshipName>Item_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Transaction Currency for this record.</description>
        <formula>Item__r.Company__r.Comp_Currency__r.ISO_Code__c</formula>
        <inlineHelpText>To manage the default transaction currency, go to the Company page.</inlineHelpText>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Activated__c</fullName>
        <description>Date this cost became effective</description>
        <label>Date Activated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <description>Date/Time on which the Item Cost is approved/activated.</description>
        <label>Date Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Deactivated__c</fullName>
        <description>Date this record was deactivated</description>
        <label>Date Deactivated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility_Cost__c</fullName>
        <label>Facility Cost</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The facility for which the item costs apply.</description>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Item Costs</relationshipLabel>
        <relationshipName>Item_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invalid_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if the itemcost is valid or invalid.</description>
        <inlineHelpText>This field determines if the itemcost is valid or invalid.</inlineHelpText>
        <label>Invalid Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Cost_Unique__c</fullName>
        <description>Name + FacilityId + Status to check for uniqueness</description>
        <label>Item Cost Unique</label>
        <length>160</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item_Specification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Specification</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <errorMessage>Item Facility needs to be the same as Item Spec Facility</errorMessage>
            <filterItems>
                <field>$Source.Facility__c</field>
                <operation>equals</operation>
                <valueField>Item_Specification__c.Facility__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Facility__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Item_Specification__c.Facility__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item_Specification__c</referenceTo>
        <relationshipLabel>Item Costs</relationshipLabel>
        <relationshipName>Item_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>Lookup to Item</description>
        <label>Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
            <errorMessage>Value does not exist or you picked an item with a source not supported for entering costs.</errorMessage>
            <filterItems>
                <field>Item__c.Source__c</field>
                <operation>notEqual</operation>
                <value>Miscellaneous</value>
            </filterItems>
            <filterItems>
                <field>Item__c.Source__c</field>
                <operation>notEqual</operation>
                <value>Expense</value>
            </filterItems>
            <filterItems>
                <field>Item__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Item__c.Company__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Item Costs</relationshipLabel>
        <relationshipName>Item_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Labor_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Labor cost for this Item</description>
        <label>Labor Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Material cost for this Item</description>
        <label>Material Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Notes about this item cost</description>
        <label>Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_hand_Revaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag indicates if the item cost is revalued for the change in the item cost value.</description>
        <label>On-hand Revaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outside_Processing_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Outside Processing cost for this Item</description>
        <label>Outside Processing Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overhead_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overhead cost for this Item</description>
        <label>Manufacturing Overhead Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planning_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The planning item cost record from which this cost was created.</description>
        <label>Planning Reference</label>
        <referenceTo>Item_Cost__c</referenceTo>
        <relationshipLabel>Item Costs</relationshipLabel>
        <relationshipName>Item_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Cost__c</fullName>
        <description>Item&apos;s standard cost</description>
        <label>Standard Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The Data/time on which the proposed cost is approved and can be used for the accounting purposes.</description>
        <inlineHelpText>The Data/time on which the proposed cost is approved and can be used for the accounting purposes.</inlineHelpText>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of this item cost record.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning - 1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Planning - 2</fullName>
                </value>
                <value>
                    <fullName>Planning - 3</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <description>Transaction Currency for this record.</description>
        <formula>Company__r.Default_Transaction_Currency__r.Name</formula>
        <inlineHelpText>Transaction currency is defined on the Company page.</inlineHelpText>
        <label>Transaction Currency</label>
        <type>Text</type>
    </fields>
    <label>Item Cost</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Facility__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Date_Approved__c</columns>
        <columns>Invalid_Flag__c</columns>
        <columns>On_hand_Revaluation__c</columns>
        <columns>Change_Reason__c</columns>
        <columns>Standard_Cost__c</columns>
        <columns>Material_Cost__c</columns>
        <columns>Labor_Cost__c</columns>
        <columns>Outside_Processing_Cost__c</columns>
        <columns>Overhead_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Cost</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_change_active_cost_fields</fullName>
        <active>false</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>Date_Activated__c</errorDisplayField>
        <errorMessage>You cannot change the active cost record</errorMessage>
    </validationRules>
</CustomObject>